# uca-ufo

./: CMakeLists.txt  README.md  config.h.in  uca-ufo-camera.c  uca-ufo-camera.h  ucaufo.spec.in
tests/: roi.py  test.c  timeout.py
